Create lighting entity to be exposed in SceneLab.
Added a new entity to control lighting position as well as variables for
Phong shading and shadow intensity.

Bug:
26591676

Tested:
Works on Linux, Nexus 5X.

Change-Id: I42bbd6141cfeaf2f4e03261e145295baa17ee0cf

--- a/src/rawassets/config.json
+++ b/src/rawassets/config.json
@@ -152,8 +152,6 @@
     "shadow_map_resolution": 512,
     "shadow_map_zoom": 2.0,
     "shadow_map_offset": 6.0,
-    "light_position": { "x": 0.0, "y": 0.0, "z": 60 },
-    "shadow_intensity": 0.33,
     "fog_roll_in_dist":1500,
     "fog_max_dist": 3000,
     "fog_color": {"r":0.95, "g":0.9, "b":0.7, "a":1.0},
@@ -230,7 +228,8 @@
       "entity_list.zooentity",
       "entity_level_0.zooentity",
       "entity_decorations.zooentity",
-      "entity_ring.zooentity"
+      "entity_ring.zooentity",
+      "entity_lights.zooentity"
     ]
   },
   "gpg_config": {
