Clean up uniform setting for shaders.
Instead of loading all the shaders and their respective uniforms, only
the shaders that are required for the current configuration should be
loaded and set with uniforms, i.e., if shadows are not turned on, then
the shadowed shaders don't need their uniforms set.

Bug:
26799688

Tested:
Works on Linux, Nexus 5X.

Change-Id: I14e0dda4bce975089f154a70665276bf63c11a10

--- a/src/rawassets/overlays/santa/config.json
+++ b/src/rawassets/overlays/santa/config.json
@@ -155,7 +155,9 @@
     "cull_distance": 50,
     "pop_out_distance": 45,
     "pop_in_distance": 40,
-    "create_shadow_map":false
+    "create_shadow_map":false,
+    "shadow_map_bias": 0.02,
+    "shadow_map_viewport_angle": 45.0
    },
 
   "scene_lab_config" : {
