--- a/src/rawassets/config.json
+++ b/src/rawassets/config.json
@@ -30,7 +30,8 @@
     "track_height": -1.89,
     "texture_tile_size": 25.0,
     "material": "materials/lake_daytime.fplmat",
-    "shader": "shaders/origwater",
+    "shader": "shaders/water",
+    "shader_shadowed": "shaders/water_shadowed",
     "default_banks": [
       { "x_min": -8.5, "x_max": -13.5, "z_min": 3.5, "z_max": 6.2 },
       { "x_min": -7.5,  "x_max": -8,    "z_min": 0.5, "z_max": 1.0 },
@@ -159,7 +160,6 @@
     "cull_distance": 50,
     "pop_out_distance": 45,
     "pop_in_distance": 40,
-    "create_shadow_map":false,
     "shadow_map_bias": 0.02,
     "shadow_map_viewport_angle": 45.0
    },
