--- a/src/rawassets/overlays/santa/config.json
+++ b/src/rawassets/overlays/santa/config.json
@@ -144,7 +144,7 @@
   },
 
   "rendering_config" : {
-    "render_shadows": false,
+    "render_shadows_by_default": false,
     "shadow_map_resolution": 512,
     "shadow_map_zoom": 2.0,
     "shadow_map_offset": 6.0,
@@ -157,9 +157,9 @@
     "pop_in_distance": 40,
     "shadow_map_bias": 0.02,
     "shadow_map_viewport_angle": 45.0,
-    "apply_phong": true,
-    "apply_specular": false,
-    "apply_normals": false
+    "apply_phong_by_default": true,
+    "apply_specular_by_default": false,
+    "apply_normal_maps_by_default": false
    },
 
   "scene_lab_config" : {
