Mesh vertices are now in object space.
Requires us to specify units and axes in anim_pipeline conversions,
and to mark root-bone only animations so that they don't have
axis conversion.

Had to update a couple of the scenery animations since they were
ending facing backwards instead of forwards. The old anim_pipeline
did't care about absolute position, which was a mistake.

Tested: Works on Linux and Mac.
Change-Id: I95172f3ef1a5ea4ebe021073953327c9f51a6398

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,6 +64,7 @@ endif()
 if(NOT TARGET motive)
   set(motive_build_samples OFF CACHE BOOL "")
   set(motive_build_tests OFF CACHE BOOL "")
+  set(motive_build_viewer OFF CACHE BOOL "")
   if(zooshi_profile_motive)
     set(motive_enable_benchmarks ON CACHE BOOL "")
     add_definitions(-DBENCHMARK_MOTIVE)
