OpenGL debug markers for zooshi.
To enable the debug markers
- on Android, add -DFPLBASE_ENABLE_DEBUG_MARKERS to APP_CPPFLAGS in
  jni/Application.mk
- on Desktop, enable the fplbase_debug_markers option in cmake

Change-Id: I5f99e3f8195a0c0b450200288b04ef03c0bd4894

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -310,6 +310,10 @@ if(ZOOSHI_DEBUG)
   #add_definitions(-D_DEBUG)
 endif()
 
+if(fplbase_debug_markers)
+  add_definitions(-DFPLBASE_ENABLE_DEBUG_MARKERS)
+endif()
+
 # Executable target.
 add_executable(zooshi ${zooshi_SRCS})
 
