--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,11 @@ android {
             // and this will be fixed when the SDK is updated.
             abiFilters 'armeabi-v7a'
         }
+        externalNativeBuild {
+          ndkBuild {
+            arguments "-j24"
+          }
+        }
     }
     buildTypes {
       release {
@@ -65,8 +70,8 @@ android {
 
 dependencies {
   compile fileTree(dir: 'libs', include: ['*.jar'])
-  compile 'com.google.android.gms:play-services-base:9.8.0'
-  compile 'com.google.android.gms:play-services-games:9.8.0'
+  compile 'com.google.android.gms:play-services-base:10.0.1'
+  compile 'com.google.android.gms:play-services-games:10.0.1'
   compile 'com.android.support:support-v4:23.0+'
 }
 
