Redirect the NDK_LIBS_OUT path to the libs folder.
Libraries that were built through NDK, like SDL, were not being
included when linking Zooshi at the end. This can be resolved by
redirecting the output libraries into the libs folder, which is
included as the jniLibs source.

Builds from clean for Android.

Change-Id: I27cf53929c6e902899632300fd44ee39728fa93a

--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,7 @@ android {
         }
         externalNativeBuild {
           ndkBuild {
-            arguments "-j24"
+            arguments = ['-j24', 'NDK_LIBS_OUT=libs']
           }
         }
     }
