Logging additional analytics events.
Adding logs for patrons being fed, game start/end events.
Includes elapsed time and controller type being used.

Note: This breaks the Linux build, because of a problem in Firebase.

Change-Id: I9f47bf7952bb55b642260843133071c0bb56c9e9

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -156,6 +156,8 @@ add_custom_target(assets
 
 # zooshi source files.
 set(zooshi_SRCS
+    src/analytics.cpp
+    src/analytics.h
     src/camera.cpp
     src/camera.h
     src/common.h
