Adding support for multiple sushi types.
Adding UI menu elements to select different sushi types.
Adding sushi with more and less gravity.

Tested on Android.

Change-Id: Id6ad247947fa30b5bd0c11400cfc2241f6ea08cc

--- a/src/rawassets/config.json
+++ b/src/rawassets/config.json
@@ -251,5 +251,22 @@
       {"name": "SushiNinja", "id": "CgkI7IvL5LUCEAIQDQ"},
       {"name": "SushiSamurai", "id": "CgkI7IvL5LUCEAIQBA"},
     ]
-  }
+  },
+  "sushi_config": [
+    {
+      "name": "Nigiri",
+      "description": "Basic tasty sushi",
+      "prototype": "Projectile"
+    },
+    {
+      "name": "Lobster",
+      "description": "Heavy, but delicious",
+      "prototype": "Projectile_Lobster"
+    },
+    {
+      "name": "Flying Fish",
+      "description": "Travels far on its wings",
+      "prototype": "Projectile_FlyingFish"
+    }
+  ]
 }
