Support for tracking unlockables, like sushi.
Adds an UnlockableManager class which is used to manage unlockable
sushi. Currently uses debug buttons to unlock a random sushi.

Tested on Android and OSX.

Change-Id: I637ccbe2b9d2c9b9010c02d8cb331e187ed53be9

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -259,6 +259,8 @@ set(zooshi_SRCS
     src/states/states_common.h
     src/states/scene_lab_state.cpp
     src/states/scene_lab_state.h
+    src/unlockable_manager.cpp
+    src/unlockable_manager.h
     src/world.cpp
     src/world.h
     src/world_renderer.cpp
