Add custom initial speed per projectile type.
Adding the ability to set different speeds for different projectile
types. Also adds 'Pufferfish' sushi, which is thrown down and floats
up.

Tested on Android.

Change-Id: Ia9be8aa432d0b810948fa9d66bac0124976aba55

--- a/src/rawassets/config.json
+++ b/src/rawassets/config.json
@@ -11,8 +11,6 @@
 
   "assets_filename": "assets.zooassets",
 
-  "projectile_speed": 40.0,
-  "projectile_upkick": 7.5,
   "projectile_height_offset": -0.5,
   "projectile_forward_offset": 1.6,
   "projectile_min_angular_velocity": { "x": 1, "y": 1, "z": 3 },
@@ -267,6 +265,12 @@
       "name": "Flying Fish",
       "description": "Travels far on its wings",
       "prototype": "Projectile_FlyingFish"
+    },
+    {
+      "name": "Pufferfish",
+      "description": "So light it floats up",
+      "prototype": "Projectile_Pufferfish",
+      "upkick": -7.5
     }
   ]
 }
