Initial support for multiple levels.
Uses a UI element, similar to sushi, to pick which level to use,
which is defined by different entity list files to load.

Moves old level layout into "Endless" which still wraps around,
while adding a new level "Easy" that is currently a copy of
Endless, but with a rail that goes in a straight line.

Allows levels to wrap as before, or finish at a specified point along
the rail, used for levels meant to be played through once.

Tested on Android and Linux (by removing Firebase temporarily)

Change-Id: Ib0a09a8128590020f7415b1b230164480d404f04

--- a/src/rawassets/config.json
+++ b/src/rawassets/config.json
@@ -231,11 +231,28 @@
   "world_def": {
     "entity_files": [
       "entity_rails.zooentity",
-      "entity_list.zooentity",
-      "entity_level_0.zooentity",
-      "entity_decorations.zooentity",
-      "entity_ring.zooentity",
-      "entity_lights.zooentity"
+      "entity_lights.zooentity",
+      "entity_list.zooentity"
+    ],
+    "levels": [
+      {
+        "name": "Endless",
+        "entity_files": [
+          "lvl_endless_rail.zooentity",
+          "lvl_endless_list.zooentity",
+          "lvl_endless_patrons.zooentity",
+          "lvl_endless_props.zooentity"
+        ]
+      },
+      {
+        "name": "Easy",
+        "entity_files": [
+          "lvl_easy_rail.zooentity",
+          "lvl_easy_list.zooentity",
+          "lvl_easy_patrons.zooentity",
+          "lvl_easy_props.zooentity"
+        ]
+      }
     ]
   },
   "gpg_config": {
