--- a/src/rawassets/overlays/santa/config.json
+++ b/src/rawassets/overlays/santa/config.json
@@ -16,131 +16,6 @@
 
   "cardboard_viewport_angle": 1.570796, // 90 degrees
 
-  "river_config" : {
-    "speed_boost" : 0.5,
-    "texture_repeats" : 16,
-    "rail_filename": "rails/player_path.rail",
-    "spline_stepsize": 700.0,
-    "track_height": -1.89,
-    "texture_tile_size": 25.0,
-    "material": "materials/lake_daytime.fplmat",
-    "shader": "shaders/water",
-    "default_banks": [
-      { "x_min": -8.5, "x_max": -13.5, "z_min": 3.5, "z_max": 6.2 },
-      { "x_min": -7.5,  "x_max": -8,    "z_min": 0.5, "z_max": 1.0 },
-      { "x_min": -0.6,  "x_max": -1.2,  "z_min": 0.2, "z_max": 0.4 },
-      { "x_min": 0,     "x_max": -0.6,  "z_min": 0.0, "z_max": 0.0 },
-      { "x_min": 0,     "x_max": 0.6,   "z_min": 0.0, "z_max": 0.0 },
-      { "x_min": 0.5,   "x_max": 1.2,   "z_min": 0.2, "z_max": 0.4 },
-      { "x_min": 3.5,   "x_max": 8.0,   "z_min": 0.6, "z_max": 0.9 },
-      { "x_min": 8.5,   "x_max": 13.5,  "z_min": 3.5, "z_max": 6.2 }
-    ],
-    "zones": [
-      {
-        "zone_start": 0.0,
-        "material": "materials/riverbank_grass_daytime.fplmat",
-      },
-      {
-        "zone_start": 0.1,
-        "material": "materials/riverbank_grass_daytime.fplmat",
-        "width": 6
-      },
-      {
-        "zone_start": 0.2,
-        "material": "materials/riverbank_grass_daytime.fplmat",
-        "width": 7
-      },
-      {
-        "zone_start": 0.3,
-        "material": "materials/riverbank_grass_daytime.fplmat",
-        "width": 9
-      },
-      {
-        "zone_start": 0.35,
-        "material": "materials/riverbank_grass_daytime.fplmat",
-        "width": 10,
-      },
-      {
-        "zone_start": 0.45,
-        "material": "materials/riverbank_grass_daytime.fplmat",
-        "width": 10,
-        "banks": [
-          { "x_min": -8.5, "x_max": -13.5, "z_min": 2.5, "z_max": 3.2 },
-          { "x_min": -7.5,  "x_max": -8,    "z_min": 0.5, "z_max": 1.0 },
-          { "x_min": -0.6,  "x_max": -1.2,  "z_min": 0.2, "z_max": 0.4 },
-          { "x_min": 0,     "x_max": -0.6,  "z_min": 0.0, "z_max": 0.0 },
-          { "x_min": 0,     "x_max": 0.6,   "z_min": 0.0, "z_max": 0.0 },
-          { "x_min": 0.5,   "x_max": 1.2,   "z_min": 0.2, "z_max": 0.4 },
-          { "x_min": 3.5,   "x_max": 8.0,   "z_min": 0.6, "z_max": 0.9 },
-          { "x_min": 8.5,   "x_max": 13.5,  "z_min": 3.5, "z_max": 6.2 }
-        ]
-      },
-      {
-        "zone_start": 0.55,
-        "material": "materials/riverbank_grass_daytime.fplmat",
-        "width": 10,
-        "banks": [
-          { "x_min": -12.5, "x_max": -18.5, "z_min": 1.5, "z_max": 2.0 },
-          { "x_min": -7.5,  "x_max": -8,    "z_min": 0.5, "z_max": 1.0 },
-          { "x_min": -0.6,  "x_max": -1.2,  "z_min": 0.2, "z_max": 0.4 },
-          { "x_min": 0,     "x_max": -0.6,  "z_min": 0.0, "z_max": 0.0 },
-          { "x_min": 0,     "x_max": 0.6,   "z_min": 0.0, "z_max": 0.0 },
-          { "x_min": 0.5,   "x_max": 1.2,   "z_min": 0.2, "z_max": 0.4 },
-          { "x_min": 7.5,   "x_max": 9.0,   "z_min": 0.6, "z_max": 0.9 },
-          { "x_min": 12.5,   "x_max": 18.5,  "z_min": 2.5, "z_max": 4.2 }
-        ]
-      },
-      {
-        "zone_start": 0.6,
-        "material": "materials/riverbank_grass_daytime.fplmat",
-        "width": 10,
-        "banks": [
-          { "x_min": -8.5, "x_max": -13.5, "z_min": 2.5, "z_max": 3.2 },
-          { "x_min": -7.5,  "x_max": -8,    "z_min": 0.5, "z_max": 1.0 },
-          { "x_min": -0.6,  "x_max": -1.2,  "z_min": 0.2, "z_max": 0.4 },
-          { "x_min": 0,     "x_max": -0.6,  "z_min": 0.0, "z_max": 0.0 },
-          { "x_min": 0,     "x_max": 0.6,   "z_min": 0.0, "z_max": 0.0 },
-          { "x_min": 0.5,   "x_max": 1.2,   "z_min": 0.2, "z_max": 0.4 },
-          { "x_min": 3.5,   "x_max": 8.0,   "z_min": 0.6, "z_max": 0.9 },
-          { "x_min": 8.5,   "x_max": 13.5,  "z_min": 3.5, "z_max": 6.2 }
-        ]
-      },
-      {
-        "zone_start": 0.7,
-        "material": "materials/riverbank_grass_daytime.fplmat",
-        "width": 10
-      },
-      {
-        "zone_start": 0.75,
-        "material": "materials/riverbank_grass_daytime.fplmat",
-        "width": 9
-      },
-      {
-        "zone_start": 0.85,
-        "material": "materials/riverbank_grass_daytime.fplmat",
-        "width": 8
-      },
-      {
-        "zone_start": 0.95,
-        "material": "materials/riverbank_grass_daytime.fplmat",
-        "width": 6
-      },
-      {
-        "zone_start": 0.99,
-        "material": "materials/riverbank_grass_daytime.fplmat",
-      },
-    ],
-    "river_index": 3,
-    "default_width": 5.0,
-    "collision_type": "Ground",
-    "collides_with": [
-      "Projectile"
-    ],
-    "mass": 1000.0,
-    "restitution": 0.5,
-    "user_tag": "Ground"
-  },
-
   "rendering_config" : {
     "render_shadows_by_default": false,
     "shadow_map_resolution": 512,
@@ -213,10 +88,134 @@
   "world_def": {
     "entity_files": [
       "entity_rails.zooentity",
-      "entity_list.zooentity",
-      "entity_level_0.zooentity",
-      "entity_decorations.zooentity",
-      "entity_ring.zooentity"
+      "entity_lights.zooentity",
+      "entity_list.zooentity"
+    ],
+    "levels": [
+      {
+        "name": "Endless",
+        "entity_files": [
+          "lvl_endless_rail.zooentity",
+          "lvl_endless_list.zooentity",
+          "lvl_endless_patrons.zooentity",
+          "lvl_endless_props.zooentity"
+        ],
+        "river_config": {
+          "material": "materials/lake_daytime.fplmat",
+          "shader": "shaders/water",
+          "default_banks": [
+            { "x_min": -8.5, "x_max": -13.5, "z_min": 3.5, "z_max": 6.2 },
+            { "x_min": -7.5,  "x_max": -8,    "z_min": 0.5, "z_max": 1.0 },
+            { "x_min": -0.6,  "x_max": -1.2,  "z_min": 0.2, "z_max": 0.4 },
+            { "x_min": 0,     "x_max": -0.6,  "z_min": 0.0, "z_max": 0.0 },
+            { "x_min": 0,     "x_max": 0.6,   "z_min": 0.0, "z_max": 0.0 },
+            { "x_min": 0.5,   "x_max": 1.2,   "z_min": 0.2, "z_max": 0.4 },
+            { "x_min": 3.5,   "x_max": 8.0,   "z_min": 0.6, "z_max": 0.9 },
+            { "x_min": 8.5,   "x_max": 13.5,  "z_min": 3.5, "z_max": 6.2 }
+          ],
+          "zones": [
+            {
+              "zone_start": 0.0,
+              "material": "materials/riverbank_grass_daytime.fplmat"
+            },
+            {
+              "zone_start": 0.1,
+              "material": "materials/riverbank_grass_daytime.fplmat",
+              "width": 6
+            },
+            {
+              "zone_start": 0.2,
+              "material": "materials/riverbank_grass_daytime.fplmat",
+              "width": 7
+            },
+            {
+              "zone_start": 0.3,
+              "material": "materials/riverbank_grass_daytime_savanna_daytime.fplmat",
+              "width": 9
+            },
+            {
+              "zone_start": 0.35,
+              "material": "materials/riverbank_savanna_daytime.fplmat",
+              "width": 10
+            },
+            {
+              "zone_start": 0.45,
+              "material": "materials/riverbank_savanna_daytime.fplmat",
+              "width": 10,
+              "banks": [
+                { "x_min": -8.5, "x_max": -13.5, "z_min": 2.5, "z_max": 3.2 },
+                { "x_min": -7.5,  "x_max": -8,    "z_min": 0.5, "z_max": 1.0 },
+                { "x_min": -0.6,  "x_max": -1.2,  "z_min": 0.2, "z_max": 0.4 },
+                { "x_min": 0,     "x_max": -0.6,  "z_min": 0.0, "z_max": 0.0 },
+                { "x_min": 0,     "x_max": 0.6,   "z_min": 0.0, "z_max": 0.0 },
+                { "x_min": 0.5,   "x_max": 1.2,   "z_min": 0.2, "z_max": 0.4 },
+                { "x_min": 3.5,   "x_max": 8.0,   "z_min": 0.6, "z_max": 0.9 },
+                { "x_min": 8.5,   "x_max": 13.5,  "z_min": 3.5, "z_max": 6.2 }
+              ]
+            },
+            {
+              "zone_start": 0.55,
+              "material": "materials/riverbank_savanna_daytime_savanna_sunset.fplmat",
+              "width": 10,
+              "banks": [
+                { "x_min": -12.5, "x_max": -18.5, "z_min": 1.5, "z_max": 2.0 },
+                { "x_min": -7.5,  "x_max": -8,    "z_min": 0.5, "z_max": 1.0 },
+                { "x_min": -0.6,  "x_max": -1.2,  "z_min": 0.2, "z_max": 0.4 },
+                { "x_min": 0,     "x_max": -0.6,  "z_min": 0.0, "z_max": 0.0 },
+                { "x_min": 0,     "x_max": 0.6,   "z_min": 0.0, "z_max": 0.0 },
+                { "x_min": 0.5,   "x_max": 1.2,   "z_min": 0.2, "z_max": 0.4 },
+                { "x_min": 7.5,   "x_max": 9.0,   "z_min": 0.6, "z_max": 0.9 },
+                { "x_min": 12.5,   "x_max": 18.5,  "z_min": 2.5, "z_max": 4.2 }
+              ]
+            },
+            {
+              "zone_start": 0.6,
+              "material": "materials/riverbank_savanna_sunset.fplmat",
+              "width": 10,
+              "banks": [
+                { "x_min": -8.5, "x_max": -13.5, "z_min": 2.5, "z_max": 3.2 },
+                { "x_min": -7.5,  "x_max": -8,    "z_min": 0.5, "z_max": 1.0 },
+                { "x_min": -0.6,  "x_max": -1.2,  "z_min": 0.2, "z_max": 0.4 },
+                { "x_min": 0,     "x_max": -0.6,  "z_min": 0.0, "z_max": 0.0 },
+                { "x_min": 0,     "x_max": 0.6,   "z_min": 0.0, "z_max": 0.0 },
+                { "x_min": 0.5,   "x_max": 1.2,   "z_min": 0.2, "z_max": 0.4 },
+                { "x_min": 3.5,   "x_max": 8.0,   "z_min": 0.6, "z_max": 0.9 },
+                { "x_min": 8.5,   "x_max": 13.5,  "z_min": 3.5, "z_max": 6.2 }
+              ]
+            },
+            {
+              "zone_start": 0.7,
+              "material": "materials/riverbank_savanna_sunset_savanna_twilight.fplmat",
+              "width": 10
+            },
+            {
+              "zone_start": 0.75,
+              "material": "materials/riverbank_savanna_twilight.fplmat",
+              "width": 9
+            },
+            {
+              "zone_start": 0.85,
+              "material": "materials/riverbank_savanna_twilight.fplmat",
+              "width": 8
+            },
+            {
+              "zone_start": 0.95,
+              "material": "materials/riverbank_savanna_twilight_grass_daytime.fplmat",
+              "width": 6
+            },
+            {
+              "zone_start": 0.99,
+              "material": "materials/riverbank_grass_daytime.fplmat"
+            }
+          ],
+          "river_index": 3,
+          "collision_type": "Ground",
+          "collides_with": [
+            "Projectile"
+          ],
+          "user_tag": "Ground"
+        }
+      }
     ]
   },
   "gpg_config": {
