--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,6 +19,13 @@ limitations under the License.
           android:versionCode="16"
           android:versionName="1.1">
 
+  <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+  <permission
+      android:name="com.google.fpl.zooshi.permission.C2D_MESSAGE"
+      android:protectionLevel="signature" />
+  <uses-permission
+      android:name="com.google.fpl.zooshi.permission.C2D_MESSAGE" />
+
   <!-- This .apk has no Java code itself, so set hasCode to false. -->
   <application android:label="@string/app_name"
                android:icon="@drawable/ic_launcher"
@@ -84,6 +91,24 @@ limitations under the License.
                android:value="@string/app_id" />
     <meta-data android:name="com.google.android.gms.version"
                android:value="@integer/google_play_services_version"/>
+
+    <service android:name="com.google.firebase.messaging.cpp.ListenerService"
+             android:exported="false" >
+      <intent-filter>
+        <action android:name="com.google.firebase.MESSAGING_EVENT" />
+      </intent-filter>
+    </service>
+
+    <service android:name="com.google.firebase.messaging.cpp.FcmInstanceIDListenerService"
+             android:exported="false" >
+      <intent-filter>
+        <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
+      </intent-filter>
+    </service>
+
+    <service android:name="com.google.firebase.messaging.cpp.RegistrationIntentService"
+             android:exported="false" >
+    </service>
   </application>
 
   <!-- Minimum for SDL -->
