Initial work for Firebase AdMob, Rewarded Video
Adds support for using AdMob rewarded video, by offering the
option to watch a video from the main screen. Doing so grants a
bonus that is applied on the next play session.

This does not handle Pause/Resume when leaving/entering app, as
SDL is making that a bit tricky, and so will be handled in a follow
up change.

Also reorganizes the Firebase helpers/listeners under Game, with
World having pointers to them.

Change-Id: I12446626fe23fc84387f673fa3b9ac59eb75e552

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -355,6 +355,9 @@ endif()
 add_library(firebase_app STATIC IMPORTED)
 set_target_properties(firebase_app PROPERTIES
     IMPORTED_LOCATION ${firebase_dir}/libs/${platform_type}/libapp.a)
+add_library(firebase_admob STATIC IMPORTED)
+set_target_properties(firebase_admob PROPERTIES
+    IMPORTED_LOCATION ${firebase_dir}/libs/${platform_type}/libadmob.a)
 add_library(firebase_analytics STATIC IMPORTED)
 set_target_properties(firebase_analytics PROPERTIES
     IMPORTED_LOCATION ${firebase_dir}/libs/${platform_type}/libanalytics.a)
@@ -378,6 +381,7 @@ target_link_libraries(zooshi
   scene_lab
   flatbuffers
   pindrop
+  firebase_admob
   firebase_analytics
   firebase_invites
   firebase_messaging
