--- a/build.gradle
+++ b/build.gradle
@@ -72,6 +72,8 @@ dependencies {
   compile fileTree(dir: 'libs', include: ['*.jar'])
   compile 'com.google.android.gms:play-services-base:10.0.1'
   compile 'com.google.android.gms:play-services-games:10.0.1'
+  compile 'com.google.firebase:firebase-ads:10.0.1'
+  compile 'com.google.firebase:firebase-core:10.0.1'
   compile 'com.google.firebase:firebase-invites:10.0.1'
   compile 'com.google.firebase:firebase-messaging:10.0.1'
   compile 'com.android.support:support-v4:23.0+'
