Fix AdMob related build issues on Desktop.
Updating the CMakeLists file, and fixing calls to Android only
functions.

Tested on OSX.

Change-Id: Ib604eae787c7d505316c3f160903af3357ed3788

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -168,6 +168,8 @@ add_custom_target(assets
 
 # zooshi source files.
 set(zooshi_SRCS
+    src/admob.cpp
+    src/admob.h
     src/analytics.cpp
     src/analytics.h
     src/camera.cpp
